<resources>
    <string name="app_name">Cryptem</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Cryptem</string>
    <string name="title_activity_conversation">ConversationActivity</string>
    <string name="title_activity_settings">Settings</string>

    <string name="welcome_message">Welcome to Cryptem. This is your first time using the app. Please enter
    your desired username, and press register to generate two pairs of 2048bit RSA keys used for signing your messages
    and decrypting messages sent from server. This is a one time process. You will not have to do this again.</string>
    <string name="welcome">Welcome</string>
    <string name="send_crypto_message">Send CryptoMessage</string>
    <string name="new_conversation">New Conversation</string>
    <string name="please_fill_all_fields">Please fill all the fields</string>
    <string name="enter_password">Enter Password</string>
    <string name="server_error">Server Error</string>
    <string name="wrong_password">Wrong Password</string>
    <string name="please_enter_password">Please Enter a Password</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username:</string>
    <string name="recipient">Recipient:</string>
    <string name="password">Password:</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="message">Message:</string>
    <string name="remember_me">Remember Me</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="ok">Ok</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_new_messages">No new messages</string>
    <string name="one_new_message">1 new message</string>
    <string name="new_messages">new messages</string>
    <string name="delete_conversation">Delete Conversation?</string>
    <string name="delete_message">Delete Message?</string>
    <string name="options">Options</string>
    <string name="clipboard_text_copied">Message copied to clipboard</string>
    <string name="not_implemented">Not Implemented Yet</string>

    <string-array name="conversation_options">
        <item>Set/Remove Password</item>
        <item>Summary</item>
        <item>Delete</item>
    </string-array>

    <string-array name="message_options">
        <item>Copy</item>
        <item>Delete</item>
    </string-array>



    <string name="title_activity_initial">InitialActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_cryptem">CryptemActivity</string>
</resources>
