<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="match_parent">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/register_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/username"
        android:layout_margin="8dp"
        app:met_baseColor="@android:color/white"
        app:met_primaryColor="@android:color/white"
        app:met_floatingLabel="highlight"/>/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/register_password"
        android:layout_below="@+id/register_username"
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_margin="8dp"
        app:met_baseColor="@android:color/white"
        app:met_primaryColor="@android:color/white"
        app:met_floatingLabel="highlight"/>/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/register_confirm_password"
        android:layout_below="@+id/register_password"
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:layout_margin="8dp"
        app:met_baseColor="@android:color/white"
        app:met_primaryColor="@android:color/white"
        app:met_floatingLabel="highlight"/><![CDATA[/>

    ]]>

    <Button

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_register"
        android:text="@string/register"
        android:background="@color/light"
        android:layout_margin="8dp"
        android:layout_below="@+id/register_remember_me"
        android:layout_alignParentEnd="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/remember_me"
        android:layout_below="@+id/register_confirm_password"
        android:layout_alignEnd="@+id/register_confirm_password"
        android:id="@+id/register_remember_me"
        android:checked="false" />

</RelativeLayout>